--- a/1. gitlab.md
+++ b/1. gitlab.md
@@ -1,19 +1,21 @@
-why gitlab, features, compare
+### Why gitlab, features, compare
 
-framework
-collaboration
-integrated devops tool chain
-project status visibility
-git hooks, policy enforcer
-complete devops cycle tool stack
+- framework
+- collaboration
+- integrated devops tool chain
+- complete devops cycle tool stack
 
-Feature coverage: Gitlab vs others
+---
+
+### Feature coverage
+
+Gitlab vs others
 
 ![](pictures/gitlab_devops_tools.PNG)
 
 ---
 
-(<@color[green](Key)>) features - Manage
+### @color[green](Key) features - Manage
 
 - Granular user roles and flexible permissions
 - multiple 3rd party integrations
@@ -23,9 +25,10 @@ Feature coverage: Gitlab vs others
 
 ---
 
-(<@color[green](Key)>) features - Plan
+### @color[green](Key) features - Plan
 
 - projects
+- project status visibility
 - issue tracking
 - templates
 - task lists
@@ -39,7 +42,7 @@ Feature coverage: Gitlab vs others
 
 ---
 
-Features - Plan
+### Features - Plan
 
 - issue due dates - show in calendar
 - related issues
@@ -54,7 +57,7 @@ Features - Plan
 
 ---
 
-(<@color[green](Key)>) features - Create
+### @color[green](Key) features - Create
 
 - MR status - WIP, draft
 - commit graph & reporting
@@ -69,7 +72,7 @@ Features - Plan
 
 ---
 
-Features - Create
+### Features - Create
 
 - Merge when pipeline succeeds
 - GPG Signed Commits
@@ -83,28 +86,29 @@ Features - Create
 
 ---
 
-(<@color[green](Key)>) features - Verify
+### @color[green](Key) features - Verify
 
 - Built-in CI/CD
+- git hooks - policy enforcer
 - Directed acylic graph mode for pipelines
 - Matrix builds
 
 ---
 
-(<@color[green](Key)>) features - Package
+### @color[green](Key) features - Package
 
 - Built-in Container Registry
 
 ---
 
-(<@color[green](Key)>) features - Secure
+### @color[green](Key) features - Secure
 
 - Static Application Security Testing (SAST)
 - HashiCorp Vault Integration
 
 ---
 
-(<@color[green](Key)>) features - Release
+### @color[green](Key) features - Release
 
 - Built-in CI/CD
 - Parent-child pipelines
@@ -112,7 +116,7 @@ Features - Create
 
 ---
 
-(<@color[green](Key)>) features - Configure
+### @color[green](Key) features - Configure
 
 - Auto DevOps
 - Kubernetes clusters
@@ -121,7 +125,7 @@ Features - Create
 
 ---
 
-(<@color[green](Key)>) features - Monitor
+### @color[green](Key) features - Monitor
 
 - applications
 - gitlab related services
@@ -131,7 +135,7 @@ Features - Create
 
 ---
 
-(<@color[green](Key)>) features - Defend
+### @color[green](Key) features - Defend
 
 - Web Application Firewall (WAF)
 - Container Host Monitoring and Blocking
