--- a/1. markdown.md
+++ b/1. markdown.md
@@ -1,11 +1,13 @@
-what is markdown
+### What is markdown(MD)
 
-Markdown is a lightweight markup language with plain-text-formatting syntax
+> Markdown is a lightweight markup language with plain-text-formatting syntax
 
 text power
 generate (covert)
 
-flavors
+---
+
+### MD flavors
 
 1. Markdown
 2. Markdown 2
@@ -14,28 +16,54 @@ flavors
 5. Pandoc
 6. ...
 
-Markdown building blocks - elements
+---
 
-diagrams and flowcharts
-math
-reference by e.g. username, issue, MR, ...
-task lists
+### MD elements - basic
+
+- table of contents - TOC
+- Superscripts / Subscripts
+- bold
+- italic
+- inline code
+- reference by e.g. username, issue, MR, ...
+- videos
+- audio
+- ....
+
+Note:
+
+reference by - !, #, @
+
+---
+
+### MD elements - advanced
+
+- footnotes
+- Math
+- Diagrams and flowcharts
+- inline HTML - advanced
+
+---
+
+### task lists
 
 ```bash
 - [x] this is complete item
 - [ ] this is incomplete item
 ```
 
-table of contents - TOC
+---
 
-links
+### links
 
 ```bash
 Format: [Placeholder](url) OR just paste the link with http and it automatically turns into link
 [Medium](http://medium.com)
 ```
 
-blockquotes
+---
+
+### blockquotes
 
 ```bash
 Format: > Words you quotes
@@ -44,7 +72,9 @@ Like he said:
 > if one only remembers to turn on the light.
 ```
 
-emphasis
+---
+
+### emphasis
 
 ```bash
 *Italic text*
@@ -54,7 +84,9 @@ __Bold text too__
 *Of course you **can** combine them*
 ```
 
-Backslash Escapes
+---
+
+### Backslash Escapes
 
 ```bash
 To tell markdown too not rendered the character after backslash
@@ -63,11 +95,9 @@ Some char that can be escaped:
 \ backslash, ` back tick, * asterisks, _ underscore, {} curly braces, [] square brackets, () parentheses, # hash mark, + plus sign, - minus sign, . dot, ! exclamation mark
 ```
 
-bold
+---
 
-inline code
-
-Fence code blocks
+### Fence code blocks
 
 ````bash
 ```javascript
@@ -79,8 +109,9 @@ Code above will be converted into code block with javascript syntax highlighting
 
 ````
 
-footnotes
-Headers
+---
+
+### Headers
 
 ```bash
 # This is header 1
@@ -88,22 +119,20 @@ Headers
 ###### This in header 6, the smallest header as you know in HTML syntax as <h6>
 ```
 
-images
+---
+
+### images
 
 ```bash
 Format: ![Alt text](url)
 ![Medium Logo](https://cdn-images-1.medium.com/max/400/1*QnlI8nTg-t9G3pLrxbX9-w.png)
 ```
 
-videos
+---
 
-audio
+### lists - ordered & unordered
 
-inline HTML - advanced
-
-lists - ordered & unordered
-
-````bash
+```bash
 Unordered list
 * first
 * second
@@ -111,22 +140,29 @@ Unordered list
    * second in second
 Ordered list
 1. one
-2. two
-3. three
+1. two
+1. three
    * Also yes, you can combine unordered with ordered list
    * Just give three spaces and your list will be nested
    * How cool and easy
 ```
 
-Superscripts / Subscripts
+---
 
-Tables
+### Tables
+
 ```bash
 |No | Name       |
 |---|------------|
 |1  | Jundi Alwan|
 |2  | John Doe   |
-````
+```
+
+Note:
+
+limited - simple one row tables
+
+---
 
 full element reference list:
 https://docs.gitlab.com/ce/user/markdown.html
